--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,8 @@ services:
       - 3306:3306
     environment:
       MYSQL_ROOT_PASSWORD: notSecureChangeMe
+    volumes:
+      - db_data:/var/lib/mysql
 
   phpmyadmin:
     image: phpmyadmin
@@ -16,3 +18,7 @@ services:
       - 8080:80
     environment:
       - PMA_ARBITRARY=1
+
+volumes:
+  db_data:
+  
