--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       MYSQL_ROOT_PASSWORD: notSecureChangeMe
     volumes:
       - db_data:/var/lib/mysql
+      - ./schema.sql:/docker-entrypoint-initdb.d/init.sql
 
   phpmyadmin:
     image: phpmyadmin
@@ -21,4 +22,3 @@ services:
 
 volumes:
   db_data:
-  
