--- a/src/.env.dev
+++ b/src/.env.dev
@@ -1,5 +1,5 @@
 # This file can be configured differently based on environment
-db_host="localhost"
+db_host="db"
 db_username="root"
 db_password="notSecureChangeMe"
 db_name="customers"
